fix : fixed width of scrollbar

--- a/docsite/docsite.css
+++ b/docsite/docsite.css
@@ -6,13 +6,22 @@
     overflow: auto;
     display: flex;
     flex-direction: column;
-    height: 80vh;
+    height: 85vh;
     align-items: center;
     border-right: 1px solid var(--gray-300);
 }
 
 .sidebar::-webkit-scrollbar {
-    display: none;
+    width: 5px;    
+}
+
+   
+.sidebar::-webkit-scrollbar-track {
+box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+.sidebar::-webkit-scrollbar-thumb {
+background-color: var(--gray-500)
 }
 
 .d-grid-sidebar-1fr{
@@ -30,14 +39,16 @@
 }
 .list-item{
     padding: 1rem 1rem 1rem 2.5rem;
+    font-size: 18px;
 }
-.list-item:active{
-    background-color:var(--gray-200);
-}
+
 .list-item:hover{
     background-color:var(--gray-200);
 }
-
+.list-item.active {
+    border-right: 3px solid var(--primary-color-600);
+    background-color: var(--gray-300);
+}
 
 .sidebarList > li{
     padding:1rem;  
